# Pivot_Network

./: .gitignore  README.md  index.html  package-lock.json  package.json
Pivot_Network_Backend/Buyer_Client/: README.md  pyproject.toml
Pivot_Network_Backend/Buyer_Client/bootstrap/windows/: start_buyer_client.ps1
Pivot_Network_Backend/Buyer_Client/buyer_client_app/: __init__.py  assistant_runtime.py  backend.py  config.py  errors.py  flow.py  main.py  mcp_fastmcp.py  mcp_server.py  session_ops.py  state.py  wireguard.py  workspace.py
Pivot_Network_Backend/Buyer_Client/buyer_client_app/static/: app.js  index.html  styles.css
Pivot_Network_Backend/Buyer_Client/docs/: current-buyer-purchase-flow-cn.md
Pivot_Network_Backend/Buyer_Client/scripts/: deploy-to-windows.sh  run-buyer-fastmcp.py  run-buyer-mcp-server.py
Pivot_Network_Backend/Buyer_Client/tests/: test_app.py  test_assistant_runtime.py  test_backend_client.py  test_config.py  test_flow.py  test_session_ops.py  test_wireguard.py  test_workspace.py
Pivot_Network_Backend/Plantform_Backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml
Pivot_Network_Backend/Plantform_Backend/.phase2b_backup_20260408231304/scripts/: inspect_onboarding_truth.py
Pivot_Network_Backend/Plantform_Backend/.phase2b_backup_20260408231304/tests/: test_seller_onboarding_api.py
Pivot_Network_Backend/Plantform_Backend/alembic/: env.py
Pivot_Network_Backend/Plantform_Backend/alembic/versions/: 0001_normalize_seller_onboarding_tables.py  0002_auth_trade_core.py  0003_capability_assessments_and_offer_binding.py  (+1 more)
Pivot_Network_Backend/Plantform_Backend/backend_app/: main.py
Pivot_Network_Backend/Plantform_Backend/docs/: README.md
Pivot_Network_Backend/Plantform_Backend/scripts/: inspect_onboarding_truth.py
Pivot_Network_Backend/Plantform_Backend/tests/: test_auth_trade_api.py  test_auth_trade_repository.py  test_capability_assessment_api.py  test_files_api.py  test_health.py  test_nodes_api.py  test_runtime_session_api.py  test_seller_onboarding_api.py  test_seller_onboarding_migration.py  test_seller_onboarding_repository.py
Pivot_Network_Backend/Seller_Client/: README.md  pyproject.toml
Pivot_Network_Backend/Seller_Client/bootstrap/: phase1-bootstrap-input.example.json  render_phase1_plan.py
Pivot_Network_Backend/Seller_Client/docs/: README.md  current-seller-onboarding-flow-cn.md  seller-bootstrap-contract.md  seller-overlay-connectivity-architecture-cn.md
Pivot_Network_Backend/Seller_Client/scripts/: attempt-manager-addr-correction.sh  check-windows-overlay-runtime.sh  deploy-to-windows.sh  monitor-swarm-manager-truth.sh  recover-and-rejoin-windows-swarm.sh  recover-windows-docker-engine.sh  rejoin-windows-swarm.sh  repair-windows-wireguard.sh  run-seller-fastmcp.py  run-seller-mcp-server.py  run-windows-bootstrap.sh  verify-windows-path.sh
Pivot_Network_Backend/Seller_Client/seller_client_app/: __init__.py  active_codex_session.py  assistant_runtime.py  backend.py  codex_session.py  config.py  local_system.py  main.py  mcp_fastmcp.py  mcp_http.py  mcp_server.py  onboarding.py  state.py
Pivot_Network_Backend/Seller_Client/tests/: test_assistant_runtime.py  test_backend_client.py  test_codex_session.py  test_config.py  test_local_system.py  test_mcp_http.py  test_mcp_server.py  test_phase1_contracts.py  test_phase2_app.py
Pivot_Network_Backend/backup_wasted/Backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml
Pivot_Network_Backend/backup_wasted/seller-client/: README.md  pyproject.toml
(+476 files in other folders)
